--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+:root {
+    --color-gray: #787c7e;
+    --color-light-gray: #d3d6da;
+    --color-white: #f1f2f3;
+    --color-yellow: #c9b458;
+    --color-green: #6aaa64;
+}
+
 .wrapper {
     max-width: 1480px;
     margin: 0 auto;
@@ -16,6 +24,12 @@ header {
     align-items: center;
 }
 
+.instructions {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
 .board {
     display: flex;
     flex-direction: column;
@@ -25,7 +39,8 @@ header {
 .letter {
     width: 50px;
     height: 50px;
-    border: 2px solid #d3d6da;
+    border: 2px solid var(--color-light-gray);
+    font-size: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -35,4 +50,20 @@ header {
 .row {
     display: flex;
     gap: 0.5rem;
+}
+
+/* tile check */
+.correct {
+    background-color: var(--color-green);
+    color: var(--color-white);
+}
+
+.close {
+    background-color: var(--color-yellow);
+    color: var(--color-white);
+}
+
+.incorrect {
+    background-color: var(--color-gray);
+    color: var(--color-white);
 }
