--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,10 @@ header {
     align-items: center;
 }
 
+h1 {
+    text-transform: uppercase;
+}
+
 .instructions {
     display: flex;
     flex-direction: column;
@@ -33,6 +37,8 @@ header {
 .board {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 0.5rem;
 }
 
