--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,12 @@
     --color-white: #f1f2f3;
     --color-yellow: #c9b458;
     --color-green: #6aaa64;
+
+    --ff-main: 'Inter', sans-serif;
+}
+
+body {
+    font-family: var(--ff-main);
 }
 
 .wrapper {
@@ -26,6 +32,16 @@ header {
 
 h1 {
     text-transform: uppercase;
+}
+
+h2 {
+    font-size: 1.2rem;
+}
+
+h3 {
+    font-size: 1rem;
+    text-align: center;
+    color: var(--color-gray);
 }
 
 .instructions {
@@ -72,4 +88,10 @@ h1 {
 .incorrect {
     background-color: var(--color-gray);
     color: var(--color-white);
+}
+
+.enter {
+    border: 2px solid var(--color-gray);
+    padding: 0.2rem;
+    text-transform: uppercase;
 }
